llvm/build/tools/clang/test/Frontend/Output/verify.c.script
/home/jazouani/llvm/build/Release+Asserts/bin/clang -cc1 -internal-isystem /home/jazouani/llvm/build/Release+Asserts/bin/../lib/clang/3.2/include -DTEST1 -verify /home/jazouani/llvm/llvm-3.2/tools/clang/test/Frontend/verify.c &&
/home/jazouani/llvm/build/Release+Asserts/bin/clang -cc1 -internal-isystem /home/jazouani/llvm/build/Release+Asserts/bin/../lib/clang/3.2/include -DTEST2 -verify /home/jazouani/llvm/llvm-3.2/tools/clang/test/Frontend/verify.c 2>&1 | FileCheck -check-prefix=CHECK2 /home/jazouani/llvm/llvm-3.2/tools/clang/test/Frontend/verify.c &&
/home/jazouani/llvm/build/Release+Asserts/bin/clang -cc1 -internal-isystem /home/jazouani/llvm/build/Release+Asserts/bin/../lib/clang/3.2/include -DTEST3 -verify /home/jazouani/llvm/llvm-3.2/tools/clang/test/Frontend/verify.c 2>&1 | FileCheck -check-prefix=CHECK3 /home/jazouani/llvm/llvm-3.2/tools/clang/test/Frontend/verify.c &&
/home/jazouani/llvm/build/Release+Asserts/bin/clang -cc1 -internal-isystem /home/jazouani/llvm/build/Release+Asserts/bin/../lib/clang/3.2/include -DTEST4 -verify /home/jazouani/llvm/llvm-3.2/tools/clang/test/Frontend/verify.c 2>&1 | FileCheck -check-prefix=CHECK4 /home/jazouani/llvm/llvm-3.2/tools/clang/test/Frontend/verify.c &&
/home/jazouani/llvm/build/Release+Asserts/bin/clang -cc1 -internal-isystem /home/jazouani/llvm/build/Release+Asserts/bin/../lib/clang/3.2/include -DTEST5 -verify /home/jazouani/llvm/llvm-3.2/tools/clang/test/Frontend/verify.c 2>&1 | FileCheck -check-prefix=CHECK5 /home/jazouani/llvm/llvm-3.2/tools/clang/test/Frontend/verify.c &&
/home/jazouani/llvm/build/Release+Asserts/bin/clang -cc1 -internal-isystem /home/jazouani/llvm/build/Release+Asserts/bin/../lib/clang/3.2/include -verify /home/jazouani/llvm/build/tools/clang/test/Frontend/Output/verify.c.tmp.invalid 2>&1 | FileCheck -check-prefix=CHECK6 /home/jazouani/llvm/llvm-3.2/tools/clang/test/Frontend/verify.c &&
echo -e '//expected-error@2{{1}}\n#error 2' | /home/jazouani/llvm/build/Release+Asserts/bin/clang -cc1 -internal-isystem /home/jazouani/llvm/build/Release+Asserts/bin/../lib/clang/3.2/include -verify 2>&1 | FileCheck -check-prefix=CHECK7 /home/jazouani/llvm/llvm-3.2/tools/clang/test/Frontend/verify.c
